--- a/youtube.html
+++ b/youtube.html
@@ -6,14 +6,18 @@
       .thumbnail {
         width: 300px;
       }
-      .search-bar{
-        
-      }
     </style>
   </head>
 
   <body>
+    <input class="search-bar" type="text" placeholder="Search" />
+
     <img class="thumbnail" src="/thumbnails/thumbnail-1.webp" alt="" />
-    <input class="search-bar" type="text" placeholder="Search"/>
+
+    <p class="video-title">
+      Talking Tech and AI with Google CEO Sundar Pichai!
+    </p>
+    <p class="video-author">Marques Brownlee</p>
+    <p class="video-stat">3.4M views &#183; 6 months ago</p>
   </body>
 </html>
